# Autostart

./: README.md  app.vazanoir.Autostart.json  meson.build
data/: app.vazanoir.Autostart.appdata.xml.in  app.vazanoir.Autostart.desktop.in  app.vazanoir.Autostart.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: app.vazanoir.Autostart.data.gresource.xml  app.vazanoir.Autostart.src.gresource.xml  main.js  meson.build  window.js  window.ui
